--- a/luvanitrilica-main/Dockerfile
+++ b/luvanitrilica-main/Dockerfile
@@ -1,54 +1,19 @@
-# Use the official Node.js 18 image as the base image
-FROM node:18-alpine AS base
+FROM node:20-alpine
 
-# Install dependencies only when needed
-FROM base AS deps
-# Check https://github.com/nodejs/docker-node/tree/b4117f9333da4138b03a546ec926ef50a31506c3#nodealpine to understand why libc6-compat might be needed.
-RUN apk add --no-cache libc6-compat
 WORKDIR /app
 
-# Install dependencies based on the preferred package manager
-COPY package.json pnpm-lock.yaml* ./
-RUN corepack enable pnpm && pnpm i --frozen-lockfile
+COPY package.json .
 
-# Rebuild the source code only when needed
-FROM base AS builder
-WORKDIR /app
-COPY --from=deps /app/node_modules ./node_modules
+RUN npm install -g pnpm
+
+RUN pnpm install
+
+RUN npm install -g serve
+
 COPY . .
 
-# Disable Next.js telemetry during build
-ENV NEXT_TELEMETRY_DISABLED=1
-
-RUN corepack enable pnpm && pnpm run build
-
-# Production image, copy all the files and run next
-FROM base AS runner
-WORKDIR /app
-
-ENV NODE_ENV=production
-# Disable Next.js telemetry during runtime
-ENV NEXT_TELEMETRY_DISABLED=1
-
-RUN addgroup --system --gid 1001 nodejs
-RUN adduser --system --uid 1001 nextjs
-
-COPY --from=builder /app/public ./public
-
-# Set the correct permission for prerender cache
-RUN mkdir .next
-RUN chown nextjs:nodejs .next
-
-# Copy Next.js build output (standalone + static + other assets)
-COPY --from=builder --chown=nextjs:nodejs /app/.next ./.next
-
-USER nextjs
+RUN pnpm build
 
 EXPOSE 3000
 
-ENV PORT=3000
-# set hostname to localhost
-ENV HOSTNAME=0.0.0.0
-
-# server.js is created by next build from the standalone output
-CMD ["node", "server.js"]
+CMD ["serve", "-s", "dist"]
